[tool.poetry]
name = "rasp-dashboard"
version = "0.1.0"
description = ""
authors = ["Dany A. Darghouth <dany.al-moghrabi@etu.unige.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
seaborn = "^0.13.2"
dash = "^2.17.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
